// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translations mediaTypes reducer should handle FETCH_MEDIA_TYPES_TRANSLATIONS_FAIL 1`] = `
Object {
  "error": [Error],
  "isFetching": false,
}
`;

exports[`translations mediaTypes reducer should handle FETCH_MEDIA_TYPES_TRANSLATIONS_SUCCESS 1`] = `
Object {
  "ids": undefined,
  "isFetching": false,
}
`;

exports[`translations mediaTypes reducer should return the initial state 1`] = `
Object {
  "error": null,
  "ids": Array [],
  "isFetching": false,
}
`;
